# MineSweeper

./: .dir-locals.el  LICENSE  MineSweeper.cabal  README.md  default.nix  reflex.nix
app/: Main.hs
src/: App.hs  CSS.hs  MineSweeper.hs  UIText.hs  Utils.hs
src/UIReflex/: CSS.hs  LongClicks.hs  UI.hs
